JumpScript/tests/baselines/reference/moduleWithNoValuesAsType.errors.txt
tests/cases/compiler/moduleWithNoValuesAsType.jump(2,8): error TS2709: Cannot use namespace 'A' as a type.
tests/cases/compiler/moduleWithNoValuesAsType.jump(7,8): error TS2709: Cannot use namespace 'B' as a type.
tests/cases/compiler/moduleWithNoValuesAsType.jump(15,8): error TS2709: Cannot use namespace 'C' as a type.


==== tests/cases/compiler/moduleWithNoValuesAsType.jump (3 errors) ====
    module A { }
    var a: A; // error
           ~
!!! error TS2709: Cannot use namespace 'A' as a type.
    
    module B {
        interface I {}
    }
    var b: B; // error
           ~
!!! error TS2709: Cannot use namespace 'B' as a type.
    
    module C {
        module M {
            interface I {}
        }
    }
    
    var c: C; // error
           ~
!!! error TS2709: Cannot use namespace 'C' as a type.